--- a/index.html
+++ b/index.html
@@ -21,5 +21,28 @@
             </nav>
         </div>
     </Header>
+    <div class="container">
+        <section class="abstract">
+            <h1 class="abstract-title">Ajude o algorítimo a ser mais certeiro</h1>
+            <p class="abstract-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies tellus nec mi porta convallis sollicitudin eu urna. Mauris rhoncus erat sed interdum dignissim. Suspendisse semper pretium consectetur. Praesent bibendum arcu risus, sit amet iaculis ex tempus quis. Cras et erat ut tellus vulputate tincidunt. Aenean lacinia euismod augue vel egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum vel urna tortor. Vivamus et arcu non felis tristique eleifend.</p>
+            <br>
+            <p class="abstract-text">Morbi eu condimentum urna. Curabitur eu magna eget turpis condimentum ultrices. Suspendisse quis lorem ultricies, pulvinar purus sed, egestas erat. Etiam ultricies a ante vehicula pharetra. Quisque ut neque mattis, consequat velit ut, ultrices orci. Nulla varius elementum erat vel pharetra. Aenean sit amet nisi diam. Morbi viverra, magna ac luctus commodo, odio ante suscipit libero, at mattis augue est vel metus.</p>
+        </section>
+        <section class="form-section">
+            <form>
+                <label for="name">Seu nome:</label><br>
+                <input type="text" id="name" name="name"><br>
+                <label for="email">E-mail:</label><br>
+                <input type="text" id="email" name="email"><br>
+                <label for="cpf">CPF:</label><br>
+                <input type="text" id="cpf" name="cpf"><br>
+                <input type="radio" id="masc" name="gender" value="masculino">
+                <label id="masc-label" for="masc">Masculino</label>
+                <input type="radio" id="fem" name="gender" value="feminino">
+                <label for="fem">Feminino</label><br>
+                <button class="btnEnviar">Enviar</button>
+            </form>
+        </section>
+    </div>
 </body>
 </html>
