feat: add footer, products section and share-form

--- a/index.html
+++ b/index.html
@@ -44,5 +44,39 @@
             </form>
         </section>
     </div>
+    <section class="products-container">
+        <div class="products-title">
+            <hr>
+            <h1>Sua seleção especial</h1>
+        </div>
+        <div class="products-cards">
+            <button class="btnProducts">Ainda mais produtos aqui!</button>
+        </div>
+    </section>
+    <section class="share-container">
+        <div class="share-title">
+            <hr>
+            <h1>Compartilhe a novidade</h1>
+        </div>
+        <p>Quer que seus amigos também ganhem a lista personalizada deles? Preencha agora!</p>
+        <form class="share-form">
+            <div class="inputs-container">
+                <div class="name-input">
+                    <label for="fname">Nome do seu amigo:</label><br>
+                    <input type="text" id="fname" name="fname">
+                </div>
+                <div class="email-input">
+                    <label for="femail">E-mail:</label><br>
+                    <input type="text" id="femail" name="femail">
+                </div>
+            </div>
+            <button class="btnEnviar">Enviar agora</button>
+        </form>
+    </section>
+    <footer>
+        <span>Testando suas habilidades em HTML, CSS e JS.</span>
+        <span>Linx Impulse</span>
+        <span>2021</span>
+    </footer>
 </body>
 </html>
