feat: add responsive.css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio | Frontend Developer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
     <Header>
         <div class="headerContent">
-            <h2>uma seleção de produtos</h6>
-            <h1>especial para você</h1>
-            <p>Todos os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!</p>
+            <div class="headerText">
+                <h2>uma seleção de produtos</h6>
+                <h1>especial para você</h1>
+                <p>Todos os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!</p>
+            </div>
             <nav>
                 <button class="btnNav">Conheça a Linx</button>
                 <button class="btnNav">Ajude o algorítimo</button>
@@ -66,7 +69,7 @@
                     <input type="text" id="fname" name="fname">
                 </div>
                 <div class="email-input">
-                    <label for="femail">E-mail:</label><br>
+                    <label for="femail">E-mail dele:</label><br>
                     <input type="text" id="femail" name="femail">
                 </div>
             </div>
