--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Desafio | Frontend Developer</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <Header>
@@ -26,6 +27,7 @@
     </Header>
     <div class="container">
         <section class="abstract">
+            <span class="iconCollapseAbstract" onclick="handleCollapse()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/></svg></span>
             <h1 class="abstract-title">Ajude o algorítimo a ser mais certeiro</h1>
             <p class="abstract-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies tellus nec mi porta convallis sollicitudin eu urna. Mauris rhoncus erat sed interdum dignissim. Suspendisse semper pretium consectetur. Praesent bibendum arcu risus, sit amet iaculis ex tempus quis. Cras et erat ut tellus vulputate tincidunt. Aenean lacinia euismod augue vel egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum vel urna tortor. Vivamus et arcu non felis tristique eleifend.</p>
             <br>
@@ -36,7 +38,7 @@
                 <label for="name">Seu nome:</label><br>
                 <input type="text" id="name" name="name"><br>
                 <label for="email">E-mail:</label><br>
-                <input type="text" id="email" name="email"><br>
+                <input type="email" id="email" name="email" required><br>
                 <label for="cpf">CPF:</label><br>
                 <input type="text" id="cpf" name="cpf"><br>
                 <input type="radio" id="masc" name="gender" value="masculino">
@@ -53,8 +55,9 @@
             <h1>Sua seleção especial</h1>
         </div>
         <div class="products-cards">
-            <button class="btnProducts">Ainda mais produtos aqui!</button>
+            
         </div>
+        <button class="btnProducts">Ainda mais produtos aqui!</button>
     </section>
     <section class="share-container">
         <div class="share-title">
@@ -81,5 +84,6 @@
         <span>Linx Impulse</span>
         <span>2021</span>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 </html>
