--- a/index.html
+++ b/index.html
@@ -18,15 +18,23 @@
                 <p>Todos os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!</p>
             </div>
             <nav>
-                <button class="btnNav">Conheça a Linx</button>
-                <button class="btnNav">Ajude o algorítimo</button>
-                <button class="btnNav">Seus produtos</button>
-                <button class="btnNav">Compartilhe</button>
+                <div class="btnNav">
+                    <a href="https://www.linx.com.br/" target="_blank">Conheça a Linx</a>
+                </div>
+                <div class="btnNav">
+                    <a href="#abstract">Ajude o algorítimo</a>
+                </div>
+                <div class="btnNav">
+                    <a href="#product">Seus produtos</a>
+                </div>
+                <div class="btnNav">
+                    <a href="#share">Compartilhe</a>
+                </div>
             </nav>
         </div>
     </Header>
     <div class="container">
-        <section class="abstract">
+        <section class="abstract" id="abstract">
             <span class="iconCollapseAbstract"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/></svg></span>
             <h1 class="abstract-title">Ajude o algorítimo a ser mais certeiro</h1>
             <p class="abstract-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies tellus nec mi porta convallis sollicitudin eu urna. Mauris rhoncus erat sed interdum dignissim. Suspendisse semper pretium consectetur. Praesent bibendum arcu risus, sit amet iaculis ex tempus quis. Cras et erat ut tellus vulputate tincidunt. Aenean lacinia euismod augue vel egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum vel urna tortor. Vivamus et arcu non felis tristique eleifend.</p>
@@ -49,7 +57,7 @@
             </form>
         </section>
     </div>
-    <section class="products-container">
+    <section class="products-container" id="product">
         <div class="products-title">
             <hr>
             <h1>Sua seleção especial</h1>
@@ -59,7 +67,7 @@
         </div>
         <button class="btnProducts">Ainda mais produtos aqui!</button>
     </section>
-    <section class="share-container">
+    <section class="share-container" id="share">
         <div class="share-title">
             <hr>
             <h1>Compartilhe a novidade</h1>
