--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                 <label for="name">Seu nome:</label><br>
                 <input type="text" id="name" name="name"><br>
                 <label for="email">E-mail:</label><br>
-                <input type="email" id="email" name="email" required><br>
+                <input type="email" id="email" name="email"><br>
                 <label for="cpf">CPF:</label><br>
-                <input type="text" id="cpf" name="cpf"><br>
+                <input type="text" id="cpf" name="cpf" maxlength="14"><br>
                 <input type="radio" id="masc" name="gender" value="masculino">
                 <label id="masc-label" for="masc">Masculino</label>
                 <input type="radio" id="fem" name="gender" value="feminino">
                 <label for="fem">Feminino</label><br>
-                <button class="btnEnviar">Enviar</button>
+                <button class="btnSend" id="btnSend">Enviar</button>
             </form>
         </section>
     </div>
@@ -84,7 +84,7 @@
                     <input type="text" id="femail" name="femail">
                 </div>
             </div>
-            <button class="btnEnviar">Enviar agora</button>
+            <button class="btnSend" id="btnSendFriend">Enviar agora</button>
         </form>
     </section>
     <footer>
