feat: add products on email page and breakpoints css

--- a/email.html
+++ b/email.html
@@ -20,8 +20,8 @@
         <h1>Olá, </h1>
         <p>Fizemos uma lista especial de produtos apenas para você. Isso mesmo: nesta lista temos só produtos que você pode gostar. Seu amigo Ciclano lhe recomendou essa lista especial. Olha só:</p>
     </section>
-    <section class="products-container" id="product">
-        <div class="products-cards">
+    <section class="products-container-email" id="product">
+        <div class="products-cards-email">
             
         </div>
         <div class="btnProductsEmail">
@@ -33,6 +33,6 @@
         <span>Linx Impulse</span>
         <span>2021</span>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./js/email.js"></script>
 </body>
 </html>
