feat: add dinamically the name to email's page

--- a/email.html
+++ b/email.html
@@ -17,7 +17,7 @@
         </div>
     </Header>
     <section class="greetings">
-        <h1>Olá, </h1>
+        <h1 id="name">Olá, </h1>
         <p>Fizemos uma lista especial de produtos apenas para você. Isso mesmo: nesta lista temos só produtos que você pode gostar. Seu amigo Ciclano lhe recomendou essa lista especial. Olha só:</p>
     </section>
     <section class="products-container-email" id="product">
