feat: add alerts

--- a/email.html
+++ b/email.html
@@ -26,7 +26,7 @@
             
         </div>
         <div class="btnProductsEmail">
-            <a>Tem muito mais aqui. Vem ver!</a>
+            <a href="/" target="_blank">Tem muito mais aqui. Vem ver!</a>
         </div>
     </section>
     <footer class="footerEmail">
