--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <section class="form-section">
             <form>
                 <label for="name">Seu nome:</label><br>
-                <input type="text" id="name" name="name"><br>
+                <input type="text" id="name" name="name" required><br>
                 <label for="email">E-mail:</label><br>
-                <input type="email" id="email" name="email"><br>
+                <input type="email" id="email" name="email" required><br>
                 <label for="cpf">CPF:</label><br>
-                <input type="text" id="cpf" name="cpf" maxlength="14"><br>
+                <input type="text" id="cpf" name="cpf" maxlength="14" required><br>
                 <input type="radio" id="masc" name="gender" value="masculino">
                 <label id="masc-label" for="masc">Masculino</label>
                 <input type="radio" id="fem" name="gender" value="feminino">
@@ -98,6 +98,20 @@
         <span>Linx Impulse</span>
         <span>2021</span>
     </footer>
+    <div class="alert error hide none">
+        <span class="alert-icon fa fa-exclamation-circle"></span>
+        <span class="msg" id="msgE"></span>
+        <span class="btnCloseError">
+            <span class="fa fa-times"></span>
+        </span>
+    </div>
+    <div class="alert success hide none">
+        <span class="alert-icon fa fa-check-circle"></span>
+        <span class="msg" id="msgS"></span>
+        <span class="btnCloseSuccess">
+            <span class="fa fa-times"></span>
+        </span>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
