--- a/email.html
+++ b/email.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="name" content="Henrique Vuolo Santana">
+    
     <title>Desafio | Frontend Developer</title>
+
+    <!-- import css -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/email.css">
+
+    <!-- import icons from font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <Header class="headerEmail">
         <div class="headerTextEmail">
             <h2>uma seleção de produtos</h6>
-            <h1>especial para você</h1>
-            <p>Todos os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!</p>
+                <h1>especial para você</h1>
+                <p>Todos os produtos desta lista foram selecionados a partir da sua navegação. Aproveite!</p>
         </div>
     </Header>
+
     <section class="greetings">
         <h1 id="name">Olá, </h1>
-        <p>Fizemos uma lista especial de produtos apenas para você. Isso mesmo: nesta lista temos só produtos que você pode gostar. Seu amigo Ciclano lhe recomendou essa lista especial. Olha só:</p>
+        <p>Fizemos uma lista especial de produtos apenas para você. Isso mesmo: nesta lista temos só produtos que você
+            pode gostar. Seu amigo Ciclano lhe recomendou essa lista especial. Olha só:</p>
     </section>
+
     <section class="products-container-email" id="product">
         <div class="products-cards-email">
-            
+
         </div>
         <div class="btnProductsEmail">
             <a href="/" target="_blank">Tem muito mais aqui. Vem ver!</a>
         </div>
     </section>
+
     <footer class="footerEmail">
         <span>Testando suas habilidades em HTML, CSS e JS.</span>
         <span>Linx Impulse</span>
         <span>2021</span>
     </footer>
+
+    <!-- Import JS -->
     <script src="./js/email.js"></script>
 </body>
+
 </html>
