--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="https://www.linx.com.br/" target="_blank">Conheça a Linx</a>
                 </div>
                 <div class="btnNav">
-                    <a href="#abstract">Ajude o algorítimo</a>
+                    <a href="#abstract">Ajude o algoritmo</a>
                 </div>
                 <div class="btnNav">
                     <a href="#product">Seus produtos</a>
