--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="abstract" id="abstract">
             <span class="iconCollapseAbstract"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z" /></svg></span>
             
-            <h1 class="abstract-title">Ajude o algorítimo a ser mais certeiro</h1>
+            <h1 class="abstract-title">Ajude o algoritmo a ser mais certeiro</h1>
 
             <p class="abstract-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies
                 tellus nec mi porta convallis sollicitudin eu urna. Mauris rhoncus erat sed interdum dignissim.
